remove redundant styling and fix text scaling too small on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,10 @@ h1 {
   font-size: 2rem;
 }
 
+p {
+  font-size: 1rem;
+}
+
 nav a {
   color: black;
 }
